﻿===== Smarty 3.2-DEV  =====
01.05.2012
- bugfix type-hint for Smarty or template object did not work while compiling plugins
- new $template->is_nocache and {$smarty.is_nocache} flag true while executing nocache code

30.04.2012
- bugfix output filter should not run before cache file written with nocache code
- add assignCached() and getCachedVars() to access cached-template value storage

30.03.2012
- implement new subfolder structure for cache files using a cache_id hash (Forum Topic 21143 and other)

27.03.2012
- bugfix whitespace control

12.03.2012
- add whitespace control by tag (Forum Topic 20064)

04.03.2012
- moved code into classes it better belongs to
- prefix core functions called from compiled templates with '_'
- update PHPunit tests
- remove trailing ?> from Smarty source and format code
- moved deprecated register object functions into SmartyBC
- fixed Namespace support

10.12.2011
- major change:
  * template variable values and its properties are stored as array in the template variable container
  * config variables are stored with prefix in template variable container
  
5.12.2011
- major change: template variable and its properties are no longer stored in Smarty_Variable objects but as
  as property of the variable container

2.12.2011
- change parsetree to free memory as early as possible
- set backtrack limit automatically to -1 when compiling to avoid problems with large template

1.12.2011
- add template namespace support for constant and function
- enable $merge_compiled_includes by default for maximum rendering speed

30.11.2011
- add new {import file=...} tag

27.11.2011
- update of exception messages
- make class Smarty_Template_Cached in file smarty_cacheresource.php loadable by autoloader
- optimization of templateExist()
- optimization of clearCompiledTemplate()
- optimization of clearCache() in file cache resource
- moved debug_print_var modifier into smarty_internal_debug.php that debugging can work with 