@@ -2,6 +2,7 @@
 01.05.2012
 - bugfix type-hint for Smarty or template object did not work while compiling plugins
 - new $template->is_nocache and {$smarty.is_nocache} flag true while executing nocache code
+- add Smarty::registerCallback()
 
 30.04.2012
 - bugfix output filter should not run before cache file written with nocache code
